--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 table, tr, td, th, thead {
-    border: 1px solid black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     font-weight: lighter;
@@ -9,6 +8,13 @@ table, tr, td, th, thead {
     margin-top: 80px;
 }
 
+td, th{
+    border-right: 1px solid lightgrey;
+}
+
+tbody tr:nth-child(odd){
+    background-color: rgba(0,0,0,.15);
+}
 .header-blue{
     background-color: rgb(70, 70, 224);
     color: white;
@@ -39,7 +45,20 @@ table, tr, td, th, thead {
     margin: 0 auto;
     margin-top:15px;
     text-transform: uppercase;
+}
+.table__primeiralinha{
+    border-top: 1px solid lightgrey;
+}
+.table__primeiracoluna{
+    padding:10px;
+}
 
+.table__marker-green{
+    color:green;
+}
+
+.table__marker-blue{
+    color: blue;
 }
 
 
